Bug11- com seletor especial * usei text -align e no table layout block

--- a/semana2/bugfixes/sem2dia4-aula8/dia4-aula8/index.css
+++ b/semana2/bugfixes/sem2dia4-aula8/dia4-aula8/index.css
@@ -5,9 +5,10 @@
   **/
 
 * {
-    margin: 0;
+    margin: auto;
     padding: 0;
     font-family: 'Roboto', sans-serif;
+    text-align: center;
 }
 
 h2 {
@@ -128,12 +129,14 @@ div:last-child {
 table {
     width: 100vw;
     text-align: center;
-    height: 350px;
-    margin: none;
+    height: 200px;
+    margin-left: auto;
+    layout: block;
 
     
 
 }
+
 td{
     width: 20px;
     height: 20px;
